[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.6.0"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
